--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
   <div class="card">
     <img src="photo.jpg" alt="Us ❤️">
-    <h1>Willlll you be my Valentine? 💘</h1>
+    <h1>Will you be my Valentine? 💘</h1>
 
     <button class="yes" onclick="openYes()">YES ❤️</button>
     <button class="no" onclick="goError()">NO 😜</button>
