--- a/yes.html
+++ b/yes.html
@@ -21,6 +21,7 @@
   </style>
 </head>
 <body>
-  <h1>I loveee youuu ♾️💖</h1>
+  <h1>I loveee youuu infinity.♾️💖</h1>
+  <h1>तिमीले YES थिच्यौ… 💖<br>यस February 14 मा म तिमीलाई डेटमा लैजानेछु।<br>ठाउँ तिमी छान ❤️</h1>
 </body>
 </html>
