--- a/yes.html
+++ b/yes.html
@@ -21,7 +21,6 @@
   </style>
 </head>
 <body>
-  <h1><br>I loveee youuu infinity.♾️💖<br></h1>
-  <h1>तिमीले YES थिच्यौ… 💖<br>यस February 14 मा म तिमीलाई डेटमा लैजानेछु।<br>ठाउँ तिमी छान ❤️</h1>
+  <h1><br>I loveee youuu infinity.♾️💖<br>तिमीले YES थिच्यौ… 💖<br>यस February 14 मा म तिमीलाई डेटमा लैजानेछु।<br>ठाउँ तिमी छान ❤️</h1>
 </body>
 </html>
